Modificado codigo fuente del bootstrap-validator para sustituir glyphicons por fontawesome, ya que da error al haber pasado a https e intentar un ajax al cdn http de glyphicons. Cambiados todos los twigs que usaban span glyphicons para que usen i fontawesomes. Ajustados bots y mapas. Ajustado apocalipsis para que cueste mucho mas conjurarlo y mantenerlo. El tutorial entraba en bucle infinito si no estas logeado, arreglado ocultandolo en el navbar a los no autenticados.

--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -291,7 +291,7 @@ body {
     border-color: #000;
 }
 .panel-quest > .panel-heading, .panel-quest > .panel-footer, .label-quest, .alert-quest {
-    background-color: #D29905;
+    background-color: #f3b005;
     border-color: #000;
 }
 .panel {
@@ -344,7 +344,7 @@ html {-webkit-text-size-adjust: none !important;}
 .bootstrap-select.form-control {
     width: 60%;
 }
-.form-signin .bootstrap-select {
+.form-signin .bootstrap-select.form-control {
     width: 100% !important;
 }
 /* ARREGLAR BORDES BLANCOS EN BOOTSRAP SELECT */
