--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -107,7 +107,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" id="quantity{{ loop.index }}" name="quantity{{ loop.index }}" min="0" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required />
                                 <input type="hidden" id="troop{{ loop.index }}" name="troop{{ loop.index }}" value="{{ troop.id }}" required />
-                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
                             </div>
                         </div>
                     </div>
