--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -66,7 +66,7 @@
                                 </div>
                                 <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required />
                                 <input type="hidden" id="troop" name="troop" value="{{ troop.id }}" required />
-                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
                             </div>
                         </div>
                     </form>
