--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,7 +12,7 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Versión 1.3b</div>
+                <div class="panel-heading text-center">Versión 1.4b</div>
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 4.</li>
@@ -30,11 +30,11 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Versión 1.2b</div>
+                <div class="panel-heading text-center">Versión 1.3b</div>
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 3.</li>
-                        <li style="color: red;">El combate ha vuelto a su versión original. Ahora la <span class="label label-extra">Velocidad</span> vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas. Sin embargo, las tropas se emparejarán por su <span class="label label-extra">Poder</span> total, de mayor a menor, en lugar de por velocidad, como se venía haciendo hasta ahora.</li>
+                        <li>El combate ha vuelto a su versión original. Ahora la <span class="label label-extra">Velocidad</span> vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas. Sin embargo, las tropas se emparejarán por su <span class="label label-extra">Poder</span> total, de mayor a menor, en lugar de por velocidad, como se venía haciendo hasta ahora.</li>
                         <li>A raíz de lo anterior, se han eliminado los Hechizos de <span class="label label-extra">Velocidad</span> y se han sustituido por otros nuevos:
                             <ul>
                                 <li><span class="label label-info">Lentitud</span> por <span class="label label-info">Sabiduría</span>, reduce el número de <span class="label label-extra">Turnos</span> para investigar.
@@ -120,7 +120,7 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Versión 1.1b</div>
+                <div class="panel-heading text-center">Versión 1.2b</div>
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 2.</li>
@@ -141,7 +141,7 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Versión 1.0b</div>
+                <div class="panel-heading text-center">Versión 1.1b</div>
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 1.</li>
@@ -155,7 +155,7 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Versión 0.1a</div>
+                <div class="panel-heading text-center">Versión 1.0a</div>
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Testeo de la funcionalidad básica del juego en un entorno multijugador.</li>
