--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <title>W&yuml;z&auml;rd - {% block title %}{% endblock %}</title>
+        <title>Wyzard - {% block title %}{% endblock %}</title>
         {# block css #}
         {% block stylesheets %}
             {% stylesheets filter='uglifycss' filter='cssrewrite' output='css/base.min.css'
