--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -30,7 +30,7 @@
             </div>
         </div>
         {% for artifact in artifacts if artifact.cost > 0 %}
-        <div class="col-xs-12 col-md-6" {% if loop.first %}id="tour-market"{% endfor %}>
+        <div class="col-xs-12 col-md-6" {% if loop.first %}id="tour-market"{% endif %}>
             <div class="panel panel-artifact">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-diamond"></i><a href="{{ path('archmage_game_home_help') }}#{{ artifact.name|slug }}" class="link">{{ artifact.name }}</a></div>
                 <div class="panel-body text-responsive">
