--- a/src/Archmage/GameBundle/Resources/views/Account/legend.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/legend.html.twig
@@ -13,7 +13,7 @@
                 <thead>
                     <tr>
                         <th class="text-center"><i class="fa fa-fw fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
-                        <th class="text-center"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Archimago</span></th>
+                        <th class="text-center"><i class="fa fa-fw fa-user"></i><span class="hidden-xs">Nick</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-rocket"></i><span class="hidden-xs">Poder</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-globe"></i><span class="hidden-xs">Tierras</span></th>
                     </tr>
