--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -13,11 +13,11 @@
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3" id="magic-conjure">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Defensa Mágica</div>
+                <div class="panel-heading text-center">Hechicería</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
-                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/building/barrier.png') }}">
+                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.png') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y <span class="label label-extra">Maná</span> en conjurar un <span class="label label-extra">Hechizo</span> sobre tu Reino o un enemigo. Al igual que con los Artefactos, debes traspasar la <span class="label label-extra">Defensa Mágica</span> del objetivo. Colocar un Hechizo de batalla en defensa cuesta 1 <span class="label label-extra">Turno</span>.</div>
