--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -13,11 +13,11 @@
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Defensa Mágica</div>
+                <div class="panel-heading text-center">Romper</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
-                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/temple.png') }}">
+                            <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/dispell.png') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-12">Aquí puedes gastar 5 <span class="label label-extra">Turnos</span> para intentar romper un <span class="label label-extra">Encantamiento</span> amigo o enemigo sobre tu reino. Si es enemigo, debes traspasar su <span class="label label-extra">Defensa Mágica</span> para lograrlo.</div>
