--- a/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
@@ -21,7 +21,7 @@
         <a href="{{ path('fos_user_registration_register') }}" class="link">Registro</a> -
         {#<a href="{{ path('fos_user_resetting_request') }}" class=link>Password</a> -#}
         <a href="{{ path('archmage_game_home_help') }}" class="link">Ayuda</a> -
-        <a href="{{ path('archmage_game_home_patch') }}" class="link" style="color:red;">Notas del Parche</a>
+        <a href="{{ path('archmage_game_home_patch') }}" class="link">Notas del Parche</a>
         <br/>
         <br/>
         <div class="row">
