Arregladas translations en registration, login, resetting, change, etc. Trabajando en resetting.

--- a/src/Archmage/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Resetting/request.html.twig
@@ -1,12 +1,17 @@
 {% extends "ArchmageUserBundle::layout.html.twig" %}
 
+{% block title %}Resetear{% endblock %}
+
 {% block fos_user_content %}
 <div class="container">
     <div class="jumbotron text-center">
         {% include "ArchmageUserBundle::logo.html.twig" %}
-        <form class="form-signin" data-toggle="validator" action="{{ path('fos_user_resetting_send_email') }}" method="POST">
-            <input type="text" id="username" name="username" class="form-control" placeholder="Usuario" required />
-            <button type="submit" id="submit" name="submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-refresh"></i>Resetear</button>
+        <form class="form-signin" data-toggle="validator" action="{{ path('fos_user_resetting_send_email') }}" method="post">
+            <div class="form-group has-feedback">
+                <input type="text" id="username" name="_username" class="form-control" placeholder="Usuario (6-20)" value="" data-minlength="6" maxlength="20" required />
+                <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
+            </div>
+            <button type="submit" id="submit" name="submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-refresh"></i>Recuperar</button>
         </form>
     </div>
 </div>
