--- a/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
@@ -15,18 +15,22 @@
             <div class="form-group has-feedback">
                 {{ form_widget(form.username, { 'attr': {'class': 'form-control', 'placeholder': 'Usuario (6-20)', 'data-minlength': '6', 'maxlength': '20', 'pattern': '^[a-zA-Z0-9]+$' } }) }}
                 <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
+                {% if form_errors(form.username) %}<small class="text-danger">Usuario no disponible</small>{% endif %}
             </div>
             <div class="form-group has-feedback">
                 {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control', 'placeholder': 'Contraseña (6-20)', 'data-minlength': '6', 'maxlength': '20' } }) }}
                 <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
+                {% if form_errors(form.plainPassword.first) %}<small class="text-danger">Contraseña incorrecta</small>{% endif %}
             </div>
             <div class="form-group has-feedback">
                 {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control', 'placeholder': 'Repetir contraseña (6-20)', 'data-minlength': '6', 'maxlength': '20', 'data-match': '#fos_user_registration_form_plainPassword_first' } }) }}
                 <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
+                {% if form_errors(form.plainPassword.second) %}<small class="text-danger">Contraseña distinta</small>{% endif %}
             </div>
             <div class="form-group has-feedback">
                 {{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'correo@gmail.com (6-30)', 'data-minlength': '6', 'maxlength': '30', 'pattern': '^[a-z0-9._\-]+\@gmail\.com$' } }) }}
                 <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
+                {% if form_errors(form.email) %}<small class="text-danger">Email no disponible</small>{% endif %}
             </div>
             {{ form_rest(form) }}
             <button type="submit" id="submit" name="_submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-sign-in"></i>Registrarse</button>
