--- a/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
@@ -3,64 +3,64 @@
 {% block title %}Entrar{% endblock %}
 
 {% block fos_user_content %}
-<div class="container">
-    <div class="jumbotron text-center">
-        {% include "ArchmageUserBundle::logo.html.twig" %}
-        <form id="login" name="login" class="form-signin" data-toggle="validator" action="{{ path("fos_user_security_check") }}" method="post">
-            <div class="form-group has-feedback">
-                <input type="text" id="username" name="_username" class="form-control" placeholder="Usuario (6-20)" value="{{ last_username }}" data-minlength="6" maxlength="20" required />
-                <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
-            </div>
-            <div class="form-group has-feedback">
-                <input type="password" id="password" name="_password" class="form-control" placeholder="Contraseña (6-20)" data-minlength="6" maxlength="20" required />
-                <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
-            </div>
-            <button type="submit" id="submit" name="_submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-sign-in"></i>Entrar</button>
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
-        </form>
-        <a href="{{ path('fos_user_registration_register') }}" class="link">Registro</a> -
-        {#<a href="{{ path('fos_user_resetting_request') }}" class=link>Password</a> -#}
-        <a href="{{ path('archmage_game_home_help') }}" class="link">Ayuda</a> -
-        <a href="{{ path('archmage_game_home_patch') }}" class="link">Notas del Parche</a>
-        <br/>
-        <br/>
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Caos'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/doom.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-danger">
-                    <h3>Caos</h3>
-                    <small>Sangre y Fuego</small>
+    <div class="container">
+        <div class="jumbotron text-center">
+            {% include "ArchmageUserBundle::logo.html.twig" %}
+            <form id="login" name="login" class="form-signin" data-toggle="validator" action="{{ path("fos_user_security_check") }}" method="post">
+                <div class="form-group has-feedback">
+                    <input type="text" id="username" name="_username" class="form-control" placeholder="Usuario (6-20)" value="{{ last_username }}" data-minlength="6" maxlength="20" required />
+                    <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
                 </div>
-            </div>
-            <div class="col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Fantasmal'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/ghost.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-info">
-                    <h3>Fantasmal</h3>
-                    <small>Mente y Espíritu</small>
+                <div class="form-group has-feedback">
+                    <input type="password" id="password" name="_password" class="form-control" placeholder="Contraseña (6-20)" data-minlength="6" maxlength="20" required />
+                    <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
                 </div>
-            </div>
-            <div class="col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Naturaleza'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/nature.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-success">
-                    <h3>Naturaleza</h3>
-                    <small>Roca y Tierra</small>
+                <button type="submit" id="submit" name="_submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-sign-in"></i>Entrar</button>
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+            </form>
+            <a href="{{ path('fos_user_registration_register') }}" class="link">Registro</a> -
+            <a href="{{ path('fos_user_resetting_request') }}" class=link>Contraseña</a> -
+            <a href="{{ path('archmage_game_home_help') }}" class="link">Ayuda</a> -
+            <a href="{{ path('archmage_game_home_patch') }}" class="link">Parches</a>
+            <br/>
+            <br/>
+            <div class="row">
+                <div class="col-xs-offset-1 col-xs-2">
+                    <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Caos'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/doom.png') }}"/></a>
+                    <div class="caption hidden-xs hidden-sm text-danger">
+                        <h3>Caos</h3>
+                        <small>Sangre y Fuego</small>
+                    </div>
                 </div>
-            </div>
-            <div class="col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Oscuridad'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/darkness.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-warning">
-                    <h3>Oscuridad</h3>
-                    <small>Polvo y Hueso</small>
+                <div class="col-xs-2">
+                    <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Fantasmal'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/ghost.png') }}"/></a>
+                    <div class="caption hidden-xs hidden-sm text-info">
+                        <h3>Fantasmal</h3>
+                        <small>Mente y Espíritu</small>
+                    </div>
                 </div>
-            </div>
-            <div class="col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Sagrado'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/holy.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-primary">
-                    <h3>Sagrado</h3>
-                    <small>Luz y Gloria</small>
+                <div class="col-xs-2">
+                    <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Naturaleza'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/nature.png') }}"/></a>
+                    <div class="caption hidden-xs hidden-sm text-success">
+                        <h3>Naturaleza</h3>
+                        <small>Roca y Tierra</small>
+                    </div>
+                </div>
+                <div class="col-xs-2">
+                    <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Oscuridad'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/darkness.png') }}"/></a>
+                    <div class="caption hidden-xs hidden-sm text-warning">
+                        <h3>Oscuridad</h3>
+                        <small>Polvo y Hueso</small>
+                    </div>
+                </div>
+                <div class="col-xs-2">
+                    <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Sagrado'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/holy.png') }}"/></a>
+                    <div class="caption hidden-xs hidden-sm text-primary">
+                        <h3>Sagrado</h3>
+                        <small>Luz y Gloria</small>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
