Terminado resetting. Implementados translations a los errores de FosUserBundle.

--- a/src/Archmage/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -7,12 +7,25 @@
     <div class="jumbotron text-center">
         {% include "ArchmageUserBundle::logo.html.twig" %}
         <form id="change" name="change" class="form-signin" data-toggle="validator" action="{{ path("fos_user_change_password") }}" {{ form_enctype(form) }} method="post">
-            {{ form_widget(form.current_password, { 'attr': {'class': 'form-control', 'placeholder': 'Contraseña actual' } }) }}
-            {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control', 'placeholder': 'Nueva contraseña' } }) }}
-            {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control', 'placeholder': 'Confirmar contraseña' } }) }}
+            <div class="form-group has-feedback">
+                {{ form_widget(form.current_password, { 'attr': {'class': 'form-control', 'placeholder': 'Contraseña actual (6-20)', 'data-minlength': '6', 'maxlength': '20' } }) }}
+                <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
+                {% if form_errors(form.current_password) %}<small class="text-danger">Contraseña incorrecta</small>{% endif %}
+            </div>
+            <div class="form-group has-feedback">
+                {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control', 'placeholder': 'Nueva contraseña (6-20)', 'data-minlength': '6', 'maxlength': '20' } }) }}
+                <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
+                {% if form_errors(form.plainPassword.first) %}<small class="text-danger">Contraseña incorrecta</small>{% endif %}
+            </div>
+            <div class="form-group has-feedback">
+                {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control', 'placeholder': 'Repetir contraseña (6-20)', 'data-minlength': '6', 'maxlength': '20', 'data-match': '#fos_user_change_password_form_plainPassword_first' } }) }}
+                <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
+                {% if form_errors(form.plainPassword.second) %}<small class="text-danger">Contraseña distinta</small>{% endif %}
+            </div>
             {{ form_rest(form) }}
             <button type="submit" id="submit" name="submit" class="btn btn-lg btn-default btn-block"><i class="fa fa-fw fa-lg fa-refresh"></i>Cambiar</button>
         </form>
+        {% include "ArchmageUserBundle::factions.html.twig" %}
     </div>
 </div>
 {% endblock fos_user_content %}
