--- a/src/Archmage/UserBundle/Resources/views/Registration/email.txt.twig
+++ b/src/Archmage/UserBundle/Resources/views/Registration/email.txt.twig
@@ -4,9 +4,9 @@
 {% autoescape false %}
 Bienvenido a Wyzard, {{ user.username }}!
 
-Activa tu cuenta accediendo pulsando en el siguiente enlace: {{ confirmationUrl }}.
+Activa tu cuenta pulsando en el siguiente enlace: {{ confirmationUrl }}.
 
-Wyzard
+El equipo de Wyzard
 {% endautoescape %}
 {% endblock %}
 
