--- a/src/Archmage/UserBundle/Resources/views/Resetting/email.txt.twig
+++ b/src/Archmage/UserBundle/Resources/views/Resetting/email.txt.twig
@@ -2,9 +2,11 @@
 
 {% block body_text %}
 {% autoescape false %}
+Hola!
+
 Puedes establecer una nueva contraseña pulsando en el siguiente enlace: {{ confirmationUrl }}.
 
-Wyzard
+El equipo de Wyzard
 {% endautoescape %}
 {% endblock %}
 
