--- a/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
@@ -28,7 +28,7 @@
                 {% if form_errors(form.plainPassword.second) %}<small class="text-danger">Contraseña distinta</small>{% endif %}
             </div>
             <div class="form-group has-feedback">
-                {{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'correo@gmail.com (6-30)', 'data-minlength': '6', 'maxlength': '30', 'pattern': '^[a-z0-9._\-]+\@gmail\.com$' } }) }}
+                {{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'Cuenta@email.com (6-30)', 'data-minlength': '6', 'maxlength': '30', 'pattern': '^[^@\s]+@[^@\s]+\.[^@\s]+$' } }) }}
                 <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
                 {% if form_errors(form.email) %}<small class="text-danger">Email no disponible</small>{% endif %}
             </div>
@@ -37,43 +37,7 @@
         </form>
         <br/>
         <br/>
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Caos'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/doom.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-danger">
-                    <h3>Caos</h3>
-                    <small>Sangre y Fuego</small>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Fantasmal'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/ghost.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-info">
-                    <h3>Fantasmal</h3>
-                    <small>Mente y Espíritu</small>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Naturaleza'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/nature.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-success">
-                    <h3>Naturaleza</h3>
-                    <small>Roca y Tierra</small>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Oscuridad'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/darkness.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-warning">
-                    <h3>Oscuridad</h3>
-                    <small>Polvo y Hueso</small>
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <a href="{{ path( 'archmage_game_home_help' ) }}#{{ 'Sagrado'|slug }}" class="thumbnail"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/faction/holy.png') }}"/></a>
-                <div class="caption hidden-xs hidden-sm text-primary">
-                    <h3>Sagrado</h3>
-                    <small>Luz y Gloria</small>
-                </div>
-            </div>
-        </div>
+        {% include "ArchmageUserBundle::factions.html.twig" %}
     </div>
 </div>
 {% endblock %}
