--- a/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Registration/register.html.twig
@@ -28,7 +28,7 @@
                 {% if form_errors(form.plainPassword.second) %}<small class="text-danger">Contraseña distinta</small>{% endif %}
             </div>
             <div class="form-group has-feedback">
-                {{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'Cuenta@email.com (6-30)', 'data-minlength': '6', 'maxlength': '30', 'pattern': '^[^@\s]+@[^@\s]+\.[^@\s]+$' } }) }}
+                {{ form_widget(form.email, { 'attr': {'class': 'form-control', 'placeholder': 'Cuenta@email.com (6-30)', 'data-minlength': '6', 'maxlength': '30', 'pattern': '^[^@\\s]+@[^@\\s]+\.[^@\\s]+$' } }) }}
                 <i class="form-control-feedback fa fa-fw" aria-hidden="true"></i>
                 {% if form_errors(form.email) %}<small class="text-danger">Email no disponible</small>{% endif %}
             </div>
